--- a/week1/lab1.html
+++ b/week1/lab1.html
@@ -1,2 +1,38 @@
 <meta name="description" content="Week 1">
 <meta Natalie Gardner>
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>Natalie Gardner</title>
+<style>
+  /* Optional: Add some basic styling to mimic the borders */
+  div {
+    border: 2px solid blue;
+    padding: 15px;
+    margin: 10px;
+    max-width: 600px; /* Limit width for better readability */
+  }
+  h1 {
+    border: 2px solid magenta;
+    padding: 10px;
+    margin-bottom: 15px;
+    color: red; /* Match text color in image */
+  }
+  p {
+    border: 2px solid green;
+    padding: 10px;
+    line-height: 1.6; /* Improve paragraph spacing */
+  }
+</style>
+</head>
+<body>
+
+<div>
+  <h1>Natalie Gardner</h1>
+  <p>
+    My name is <b>Natalie Gardner</b>. I've lived in <i>Rhode Island</i> my whole life! I have a younger <u>brother</u> hes 16. My hobbies are reading books bing watching tv, and go for long drives. I love taking my puppy for a run, hanging out with friends and my family. I love to travel and go on cruises.   
+  </p>
+</div>
+
+</body>
+</html>
