--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html> lang="en"><html>
     <head>
         <!-- put stuff you do not want normally visible in head-->
          <title> SE 111 HTML Main Page</title>
          <meta charset="UTF-8"
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <title>Main Page</title>
+        
         
     </head>
 <body>
     <h1>welcome to the html/javascript Main page</h1>
     <p>below is a list </p>
+    <u1>
+        <li><a href="week8/lab8.html"> link to week 8 Assignment</a></li>
+    </u1>
 </body>
 
     </html>
