--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <u1>
         <li><a href="week8/lab8.html"> link to week 8 Assignment</a></li>
         <li><a href="week7/lab7.html"> link to week 7 Assignment</a></li>
+        <li><a href="week9/lab9.html"> link to week 9 Assignment</a></li>
     </u1>
 </body>
 
