--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>below is a list </p>
     <u1>
         
+        <li><a href="week5/lab5.html"> link to week 5 Assignment</a></li>
         <li><a href="week6/lab6.html"> link to week 6 Assignment</a></li>
         <li><a href="week7/lab7.html"> link to week 7 Assignment</a></li>
         <li><a href="week8/lab8.html"> link to week 8 Assignment</a></li>
